@@ -12,7 +12,6 @@ package psiprobe.model;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -351,7 +350,7 @@ public class ServletInfo {
    * @return the mappings
    */
   public List<String> getMappings() {
-    return mappings == null ? Collections.emptyList() : new ArrayList<>(mappings);
+    return mappings == null ? List.of() : new ArrayList<>(mappings);
   }
 
   /**
@@ -360,7 +359,7 @@ public class ServletInfo {
    * @param mappings the new mappings
    */
   public void setMappings(Collection<String> mappings) {
-    this.mappings = mappings == null ? Collections.emptyList() : new ArrayList<>(mappings);
+    this.mappings = mappings == null ? List.of() : new ArrayList<>(mappings);
   }
 
 }
